@@ -108,6 +108,9 @@ class PageGtk(PageBase):
             self.part_advanced_warning_message = builder.get_object('part_advanced_warning_message')
             self.part_advanced_warning_hbox = builder.get_object('part_advanced_warning_hbox')
             self.part_auto_comment_label = builder.get_object('part_auto_comment_label')
+            self.partition_list_buttonbox = builder.get_object('partition_list_buttonbox')
+            self.part_advanced_recalculating_box = builder.get_object('part_advanced_recalculating_box')
+            self.part_advanced_recalculating_spinner = builder.get_object('part_advanced_recalculating_spinner')
 
             self.partition_bars = {}
             self.segmented_bar_vbox = None
@@ -152,6 +155,16 @@ class PageGtk(PageBase):
             self.debug('Could not create language page: %s', e)
             self.page = None
         self.plugin_widgets = self.page
+
+    def progress_start(self, *args):
+        self.partition_list_buttonbox.set_sensitive(False)
+        self.part_advanced_recalculating_box.show()
+        self.part_advanced_recalculating_spinner.start()
+    
+    def progress_stop(self, *args):
+        self.partition_list_buttonbox.set_sensitive(True)
+        self.part_advanced_recalculating_spinner.stop()
+        self.part_advanced_recalculating_box.hide()
 
     def plugin_get_current_page(self):
         return self.current_page
@@ -1487,8 +1500,7 @@ class Page(Plugin):
             else:
                 break
             del self.update_partitions[0]
-            self.frontend.debconf_progress_step(1)
-            self.frontend.refresh()
+            self.progress_step('', 1)
 
     def maybe_thaw_choose_partition(self):
         # partman/choose_partition is special; it's the main control point
@@ -1627,8 +1639,7 @@ class Page(Plugin):
                 state = self.__state[-1]
                 if state[0] == question:
                     # advance to next partition
-                    self.frontend.debconf_progress_step(1)
-                    self.frontend.refresh()
+                    self.progress_step('', 1)
                     self.debug('Partman: update_partitions = %s',
                                self.update_partitions)
                     state[1] = None
@@ -1650,7 +1661,7 @@ class Page(Plugin):
                         self.__state.pop()
                         self.update_partitions = None
                         self.building_cache = False
-                        self.frontend.debconf_progress_stop()
+                        self.progress_stop()
                         self.frontend.refresh()
                         self.ui.current_page = self.ui.page_advanced
                         self.ui.update_partman(
@@ -1751,10 +1762,8 @@ class Page(Plugin):
                         }
 
                     drop_privileges()
-                    self.frontend.debconf_progress_start(
-                        0, len(self.update_partitions),
+                    self.progress_start(0, len(self.update_partitions),
                         self.description('partman/progress/init/parted'))
-                    self.frontend.refresh()
                     self.debug('Partman: update_partitions = %s',
                                self.update_partitions)
 
@@ -1779,8 +1788,7 @@ class Page(Plugin):
                         self.thaw_choices('choose_partition')
                         self.update_partitions = None
                         self.building_cache = False
-                        self.frontend.debconf_progress_stop()
-                        self.frontend.refresh()
+                        self.progress_stop()
                         self.ui.current_page = self.ui.page_advanced
                         self.ui.update_partman(
                             self.disk_cache, self.partition_cache,
@@ -2289,6 +2297,18 @@ class Page(Plugin):
         assert self.current_question == 'partman/choose_partition'
         self.undoing = True
         self.exit_ui_loops()
+
+    def progress_start(self, *args):
+        if hasattr(self.ui, 'progress_start'):
+            self.ui.progress_start(*args)
+        else:
+            Plugin.progress_start(self, *args)
+
+    def progress_stop(self, *args):
+        if hasattr(self.ui, 'progress_stop'):
+            self.ui.progress_stop(*args)
+        else:
+            Plugin.progress_stop(self, *args)
 
 # Notes:
 #
