@@ -1159,11 +1159,6 @@ class Wizard(BaseFrontend):
         return callback(source, debconf_condition)
 
     def debconf_progress_start (self, progress_min, progress_max, progress_title):
-        if self.page_name(self.steps.get_current_page()) == 'stepPartAdvanced':
-            self.partition_list_buttonbox.set_sensitive(False)
-            self.part_advanced_recalculating_box.show()
-            self.part_advanced_recalculating_spinner.start()
-            return
         if self.progress_position.depth() == 0:
             if self.current_page is not None:
                 self.debconf_progress_window.set_transient_for(
@@ -1211,11 +1206,6 @@ class Wizard(BaseFrontend):
         return True
 
     def debconf_progress_stop (self):
-        if self.page_name(self.steps.get_current_page()) == 'stepPartAdvanced':
-            self.partition_list_buttonbox.set_sensitive(True)
-            self.part_advanced_recalculating_spinner.stop()
-            self.part_advanced_recalculating_box.hide()
-            return
         self.progress_cancelled = False
         self.progress_position.stop()
         if self.progress_position.depth() == 0:
