@@ -7,6 +7,8 @@ ubiquity (2.1.30) UNRELEASED; urgency=low
   [ Evan Dandrea ]
   * Move the alpha warning for the GTK+ frontend to the language page.
     It fits better there now that we have the greeter functionality.
+  * Push handling the progress bar when on the partitioning page
+    properly into ubi-partman.
 
  -- Mario Limonciello <Mario_Limonciello@Dell.com>  Tue, 02 Mar 2010 18:15:15 -0600
 
